# Complete-Striped-Smith-Waterman-Library

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
